add in travel photos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Travis Lu</title>
     <meta name="viewport" content="width=devide-width,initial-scale=1">
     <meta charset="utf-8">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -13,9 +14,16 @@
       <li style="background-color: #e07a5f;"><a href="projects.html">Projects</a></li>
       <li style="background-color: #f4f1de;"><a href="index.html">Home</a></li>
     </ul>
-    <div class="intro">
-      <p>Hello! My name is</p>
-      <h1>Travis Lu</h1>
+    <div class="container">
+        <div style="display: inline;">
+            <div class="intro">
+                <p>Hello! My name is</p>
+                <h1>Travis Lu</h1>
+              </div>
+        </div>
+    <div class="aboutme">
+      <p>Actuarial Science major with a hobby in webdesign</p>
+    </div>
     </div>
   </body>
 </html>
