--- a/travel.html
+++ b/travel.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Travis Lu</title>
+    <title>Travel</title>
     <meta name="viewport" content="width=devide-width,initial-scale=1">
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/travel.css">
   </head>
   <body>
       <ul class="content-bar">
@@ -13,6 +13,52 @@
         <li><a href="projects.html" style="background-color: #e07a5f;">Projects</a></li>
         <li><a href="index.html" style="background-color: #f4f1de;">Home</a></li>
       </ul>
-    <script src="scripts/main.js"></script>
+      <div class="container">
+        <div class="intro">
+            <h1>My Travels</h1>
+        </div>
+        <div class="places">
+            <div class="place">
+                <img src="images/IMG_3306.JPG">
+                <p>Midwest</p>
+            </div>
+            <div class="place">
+                <img src="images/DSC_1014.JPG">
+                <p>Northeast</p>
+            </div>
+            <div class="place">
+                <img src="images/DSC_0852_1.JPG">
+                <p>Southeast</p>
+            </div>           
+            <div class="place">
+                <img src="images/DSC_1014.JPG">
+                <p>Southwest</p>
+            </div>
+            <div class="place">
+                <img src="images/DSC_0212 1.JPG">
+                <p>West</p>
+            </div>
+            <div class="place">
+                <img src="images/DSC_0554 1.JPG">
+                <p>Taiwan</p>
+            </div>
+            <div class="place">
+                <img src="images/DSC_0352_1.JPG">
+                <p>Japan</p>
+            </div>
+            <div class="place">
+                <img src="images/DSC_0212 1.JPG">
+                <p>Korea</p>
+            </div>
+            <div class="place">
+                <img src="images/DSC_0109 1.JPG">
+                <p>Germany</p>
+            </div>
+            <div class="place">
+                <img src="images/LRM_EXPORT_517497729954034_20190403_231951384 (1).jpeg">
+                <p>Czechia</p>
+            </div>
+        </div>
+      </div>
   </body>
 </html>
