start section for travel description

--- a/travel.html
+++ b/travel.html
@@ -37,6 +37,10 @@
             <div class="place">
                 <img src="images/DSC_0212 1.JPG">
                 <p>West</p>
+                <div class="location-description">
+                  <span><p style="font-weight: bold">Last visited: </p><p>June 2018</p></span>
+                  <p class="description">something cool about this place</p>
+                </div>
             </div>
             <div class="place">
                 <img src="images/DSC_0554 1.JPG">
