--- a/travel.html
+++ b/travel.html
@@ -19,48 +19,134 @@
         </div>
         <div class="places">
             <div class="place">
-                <img src="images/IMG_3306.JPG">
-                <p>Midwest</p>
+                <div class="place-title">
+                    <img src="images/IMG_3306.JPG">
+                    <p>Midwest</p>
+                </div>
+                <div class="location-description">
+                    <div>
+                      <p style="font-weight: bold">Last visited: </p>
+                      <p>June 2018</p>
+                    </div>
+                    <p class="description">something cool about this place</p>
+                  </div>
             </div>
             <div class="place">
-                <img src="images/DSC_1014.JPG">
+                <div class="place-title">
+                    <img src="images/DSC_1014.JPG">
                 <p>Northeast</p>
+                </div>
+                <div class="location-description">
+                    <div>
+                      <p style="font-weight: bold">Last visited: </p>
+                      <p>June 2018</p>
+                    </div>
+                    <p class="description">something cool about this place</p>
+                  </div>
             </div>
             <div class="place">
-                <img src="images/DSC_0852_1.JPG">
+                <div class="place-title">
+                    <img src="images/DSC_0852_1.JPG">
                 <p>Southeast</p>
+                </div>
+                <div class="location-description">
+                    <div>
+                      <p style="font-weight: bold">Last visited: </p>
+                      <p>June 2018</p>
+                    </div>
+                    <p class="description">something cool about this place</p>
+                  </div>
             </div>           
             <div class="place">
-                <img src="images/DSC_1014.JPG">
+                <div class="place-title">
+                    <img src="images/DSC_1014.JPG">
                 <p>Southwest</p>
+                </div>
+                <div class="location-description">
+                    <div>
+                      <p style="font-weight: bold">Last visited: </p>
+                      <p>June 2018</p>
+                    </div>
+                    <p class="description">something cool about this place</p>
+                  </div>
             </div>
             <div class="place">
-                <img src="images/DSC_0212 1.JPG">
-                <p>West</p>
+                <div class="place-title">
+                    <img src="images/DSC_0212 1.JPG">
+                    <p>West</p>
+                </div>
                 <div class="location-description">
-                  <span><p style="font-weight: bold">Last visited: </p><p>June 2018</p></span>
+                  <div>
+                    <p style="font-weight: bold">Last visited: </p>
+                    <p>June 2018</p>
+                  </div>
                   <p class="description">something cool about this place</p>
                 </div>
             </div>
             <div class="place">
-                <img src="images/DSC_0554 1.JPG">
+                <div class="place-title">
+                    <img src="images/DSC_0554 1.JPG">
                 <p>Taiwan</p>
+                </div>
+                <div class="location-description">
+                    <div>
+                      <p style="font-weight: bold">Last visited: </p>
+                      <p>June 2018</p>
+                    </div>
+                    <p class="description">something cool about this place</p>
+                  </div>
             </div>
             <div class="place">
-                <img src="images/DSC_0352_1.JPG">
+                <div class="place-title">
+                    <img src="images/DSC_0352_1.JPG">
                 <p>Japan</p>
+                </div>
+                <div class="location-description">
+                    <div>
+                      <p style="font-weight: bold">Last visited: </p>
+                      <p>June 2018</p>
+                    </div>
+                    <p class="description">something cool about this place</p>
+                  </div>
             </div>
             <div class="place">
-                <img src="images/DSC_0212 1.JPG">
+                <div class="place-title">
+                    <img src="images/DSC_0212 1.JPG">
                 <p>Korea</p>
+                </div>
+                <div class="location-description">
+                    <div>
+                      <p style="font-weight: bold">Last visited: </p>
+                      <p>June 2018</p>
+                    </div>
+                    <p class="description">something cool about this place</p>
+                  </div>
             </div>
             <div class="place">
-                <img src="images/DSC_0109 1.JPG">
+                <div class="place-title">
+                    <img src="images/DSC_0109 1.JPG">
                 <p>Germany</p>
+                </div>
+                <div class="location-description">
+                    <div>
+                      <p style="font-weight: bold">Last visited: </p>
+                      <p>June 2018</p>
+                    </div>
+                    <p class="description">something cool about this place</p>
+                  </div>
             </div>
             <div class="place">
-                <img src="images/LRM_EXPORT_517497729954034_20190403_231951384 (1).jpeg">
-                <p>Czechia</p>
+                <div class="place-title">
+                    <img src="images/LRM_EXPORT_517497729954034_20190403_231951384 (1).jpeg">
+                    <p>Czechia</p>
+                </div>
+                <div class="location-description">
+                    <div>
+                      <p style="font-weight: bold">Last visited: </p>
+                      <p>June 2018</p>
+                    </div>
+                    <p class="description">something cool about this place</p>
+                  </div>
             </div>
         </div>
       </div>
